--- a/package.json
+++ b/package.json
@@ -12,17 +12,19 @@
     "url": "https://github.com/mir4ef/websockets/issues"
   },
   "engines": {
-    "node": ">=6.3.0"
+    "node": ">=12.0.0"
   },
-  "main": "server.js",
+  "main": "server/server.js",
   "license": "Apache License 2.0",
   "dependencies": {
     "body-parser": "^1.14.1",
     "compression": "^1.6.1",
+    "dotenv-safe": "^8.2.0",
     "express": "^4.12.4",
-    "helmet": "^3.0.0",
+    "express-rate-limit": "^5.2.3",
+    "helmet": "^4.4.1",
     "morgan": "^1.5.3",
-    "socket.io": "^1.6.0",
-    "spdy": "^3.4.4"
+    "socket.io": "^3.1.1",
+    "spdy": "^4.0.2"
   }
 }
